Added social links to footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,50 +1,119 @@
-{{- $license := default "none" site.Params.footer.creativeCommonsLicense -}}
-{{- $licenseData := index site.Data.til.cc $license -}}
-{{- $showCopyright := and site.Copyright ( ne $license "zero" ) -}}
+{{- $license := default "none" site.Params.footer.creativeCommonsLicense -}} {{-
+$licenseData := index site.Data.til.cc $license -}} {{- $showCopyright := and
+site.Copyright ( ne $license "zero" ) -}}
 <section class="items-top flex flex-row justify-between opacity-70">
   <div class="flex flex-col space-y-2">
     {{- if $showCopyright }}
-      <p>Copyright &copy; {{ now.Year }}, {{ default "all rights reserved" site.Copyright }}.</p>
-    {{- end }}
-
-    {{- with $licenseData }}
-      <div
-        xmlns:cc="https://creativecommons.org/ns#"
-        xmlns:dct="http://purl.org/dc/terms/"
-        about="https://creativecommons.org"
+    <p>
+      Copyright &copy; {{ now.Year }}, {{ default "all rights reserved"
+      site.Copyright }}.
+    </p>
+    {{- end }} {{- with $licenseData }}
+    <div
+      xmlns:cc="https://creativecommons.org/ns#"
+      xmlns:dct="http://purl.org/dc/terms/"
+      about="https://creativecommons.org"
+    >
+      Content is available under
+      <a
+        href="{{ .url }}"
+        rel="license"
+        class="inline-block"
+        title="Creative Commons {{ .name }}"
+        >{{ .abbr }}</a
       >
-        Content is available under
-        <a href="{{ .url }}" rel="license" class="inline-block" title="Creative Commons {{ .name }}"
-          >{{ .abbr }}</a
-        >
-        unless otherwise noted.
+      unless otherwise noted.
+    </div>
+    {{- if (default true site.Params.footer.showCreativeCommonsIcons) }}
+    <div
+      class="mt-2 flex items-center space-x-2 fill-slate-400 hover:fill-slate-600 motion-safe:transition-colors"
+    >
+      <div class="flex-none cursor-help">{{ partial "svg/cc.html" }}</div>
+      {{- range .elements -}}
+      <div class="flex-none cursor-help">
+        {{ partial ( printf "svg/cc-%s.html" . ) }}
       </div>
-      {{- if (default true site.Params.footer.showCreativeCommonsIcons) }}
-        <div
-          class="mt-2 flex items-center space-x-2 fill-slate-400 hover:fill-slate-600 motion-safe:transition-colors"
-        >
-          <div class="flex-none cursor-help">{{ partial "svg/cc.html" }}</div>
-          {{- range .elements -}}
-            <div class="flex-none cursor-help">{{ partial ( printf "svg/cc-%s.html" . ) }}</div>
-          {{- end }}
-        </div>
       {{- end }}
-    {{- else }}
-      {{- if ne $license "none" }}
-        {{- errorf "unknown %q CC license specified in hugo.toml" $license -}}
-      {{- end }}
-    {{- end }}
-
+    </div>
+    {{- end }} {{- else }} {{- if ne $license "none" }} {{- errorf "unknown %q
+    CC license specified in hugo.toml" $license -}} {{- end }} {{- end }}
   </div>
 
   {{- if default true site.Params.footer.showThemeCredit }}
-    <div>
-      <a
-        href="{{ site.Data.til.meta.themeUrl }}"
-        title="{{ site.Data.til.meta.themeName }} &#8212; A Hugo theme by Michael Henriksen"
-        data-theme-version="{{ site.Data.til.meta.themeVersion }}"
-        >theme: til</a
-      >
-    </div>
+  <div>
+    <a
+      href="{{ site.Data.til.meta.themeUrl }}"
+      title="{{ site.Data.til.meta.themeName }} &#8212; A Hugo theme by Michael Henriksen"
+      data-theme-version="{{ site.Data.til.meta.themeVersion }}"
+      >theme: til</a
+    >
+  </div>
   {{- end }}
+
+  <style>
+    .icon-link {
+      float: right;
+      display: inline-flex;
+      margin: 4px;
+      width: 30px;
+      height: 30px;
+    }
+  </style>
+  <div class="container" id="iconContainer">
+    <!-- Instagram -->
+    <a
+      class="icon-link"
+      href="https://www.instagram.com/macandcheesepleas"
+      target="_blank"
+      aria-label="Instagram"
+    >
+      <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path
+          d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zm5.25-.25a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5z"
+        />
+      </svg>
+    </a>
+
+    <!-- TikTok -->
+    <a
+      class="icon-link"
+      href="https://www.tiktok.com/@macandcheeseplease.com"
+      target="_blank"
+      aria-label="TikTok"
+    >
+      <svg class="icon" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M38.0766847,15.8542954 C36.0693906,15.7935177 34.2504839,14.8341149 32.8791434,13.5466056 C32.1316475,12.8317108 31.540171,11.9694126 31.1415066,11.0151329 C30.7426093,10.0603874 30.5453728,9.03391952 30.5619062,8 L24.9731521,8 L24.9731521,28.8295196 C24.9731521,32.3434487 22.8773693,34.4182737 20.2765028,34.4182737 C19.6505623,34.4320127 19.0283477,34.3209362 18.4461858,34.0908659 C17.8640239,33.8612612 17.3337909,33.5175528 16.8862248,33.0797671 C16.4386588,32.6422142 16.0833071,32.1196657 15.8404292,31.5426268 C15.5977841,30.9658208 15.4727358,30.3459348 15.4727358,29.7202272 C15.4727358,29.0940539 15.5977841,28.4746337 15.8404292,27.8978277 C16.0833071,27.3207888 16.4386588,26.7980074 16.8862248,26.3604545 C17.3337909,25.9229017 17.8640239,25.5791933 18.4461858,25.3491229 C19.0283477,25.1192854 19.6505623,25.0084418 20.2765028,25.0219479 C20.7939283,25.0263724 21.3069293,25.1167239 21.794781,25.2902081 L21.794781,19.5985278 C21.2957518,19.4900128 20.7869423,19.436221 20.2765028,19.4380839 C18.2431278,19.4392483 16.2560928,20.0426009 14.5659604,21.1729264 C12.875828,22.303019 11.5587449,23.9090873 10.7814424,25.7878401 C10.003907,27.666593 9.80084889,29.7339663 10.1981162,31.7275214 C10.5953834,33.7217752 11.5748126,35.5530237 13.0129853,36.9904978 C14.4509252,38.4277391 16.2828722,39.4064696 18.277126,39.8028054 C20.2711469,40.1991413 22.3382874,39.9951517 24.2163416,39.2169177 C26.0948616,38.4384508 27.7002312,37.1209021 28.8296253,35.4300711 C29.9592522,33.7397058 30.5619062,31.7522051 30.5619062,29.7188301 L30.5619062,18.8324027 C32.7275484,20.3418321 35.3149087,21.0404263 38.0766847,21.0867664 L38.0766847,15.8542954 Z"
+        />
+      </svg>
+    </a>
+  </div>
+
+  <!-- Facebook -->
+  <a
+    class="icon-link"
+    href="https://www.facebook.com/macandcheeseplease/"
+    target="_blank"
+    aria-label="Facebook"
+  >
+    <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <path
+        d="M22 12a10 10 0 1 0-11.625 9.875v-6.987h-2.2v-2.888h2.2V9.797c0-2.175 1.293-3.375 3.275-3.375.95 0 1.943.17 1.943.17v2.13h-1.095c-1.078 0-1.413.668-1.413 1.352v1.625h2.4l-.384 2.888h-2.016V21.875A10 10 0 0 0 22 12Z"
+      />
+    </svg>
+  </a>
+
+  <!-- YouTube -->
+  <a
+    class="icon-link"
+    href="https://www.youtube.com/@macandcheese.please"
+    target="_blank"
+    aria-label="YouTube"
+  >
+    <svg class="icon" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"
+      />
+    </svg>
+  </a>
 </section>
